# work-core-api

./: .env  .gitignore  .gitlab-ci.yml  README.md  cookiecutter-config-file.yml  main.py  pyproject.toml  utils.py
api/: deps.py
api/api_v1/: api.py
api/api_v1/endpoints/: folders.py  keys.py  languages.py  pages.py  projects.py  values.py
core/: config.py
crud/: __init__.py  crud_folder.py  crud_key.py  crud_language.py  crud_page.py  crud_project.py  crud_value.py
db/: database.py
frontend/: .env
models/: __init__.py  folder.py  folder_relation.py  key.py  language.py  page.py  page_relation.py  project.py  value.py
schemas/: __init__.py  folder.py  key.py  language.py  page.py  project.py  restful.py  value.py
